# triangles_3d

./: CMakeLists.txt  README.md
include/: OctTree.hpp  a.out  approx_equal.hpp  cut.hpp  func.hpp  line.hpp  parsing_triangles.hpp  plane.hpp  point.hpp  test.cc  triangle.hpp  vector.hpp
src/: OctTree.cc  TESTS.cc  a.out  approx_equal.cc  cut.cc  func.cc  line.cc  main.cc  parsing_triangles.cc  plane.cc  point.cc  triangle.cc  vector.cc
